# DenseTracking

./: .gitignore  CMakeLists.txt  README.md
include/: DenseTracking.h  DeviceFunction.h  ImageProc.h
src/: CudaUtils.h  DenseTracking.cpp  DeviceFunction.cu  ImageProc.cu
test/: CMakeLists.txt  test_prog.cpp
